# MRM_SaumyaJoshi

./: Task_1.md  Task_3.md  Task_4_5.md
MachineLearning/: LinearRegression.py  LogesticRegression.ipynb  NeuralNetwork.ipynb  Untitled1(2).ipynb
OpenCV/: README
OpenCV/ArucoMarker/: aruco_detection.py  camera_calibration.py
OpenCV/TennisBall/: Bonus_Task.py  HoughCircles.py  LabValues.py  canny.py  laplacian.py  sobel.py  yellow_tennis_ball_detection.py
ROS_tasks/GP/: ATT.launch  README  rover_controller_node.cpp
ROS_tasks/OA/: OA.launch  OA3.cpp  README
ROS_tasks/PCL/: OA.cpp  OA4.cpp
ROS_tasks/chatroom/: README.md
ROS_tasks/chatroom/catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh
ROS_tasks/chatroom/catkin_ws/devel/include/chatroom/: ChatMessage.h
ROS_tasks/chatroom/catkin_ws/devel/lib/chatroom/: chatroom_node  user_node  user_node_1  user_node_2  user_node_3
ROS_tasks/chatroom/catkin_ws/devel/lib/pkgconfig/: beginner_tutorials.pc  chatroom.pc
ROS_tasks/chatroom/catkin_ws/devel/lib/python3/dist-packages/chatroom/msg/: _ChatMessage.py
ROS_tasks/chatroom/catkin_ws/devel/share/beginner_tutorials/cmake/: beginner_tutorialsConfig.cmake
ROS_tasks/chatroom/catkin_ws/devel/share/chatroom/cmake/: chatroom-msg-extras.cmake  chatroom-msg-paths.cmake  chatroomConfig.cmake
ROS_tasks/chatroom/catkin_ws/devel/share/common-lisp/ros/chatroom/msg/: ChatMessage.lisp  _package.lisp  _package_ChatMessage.lisp  chatroom-msg.asd
ROS_tasks/chatroom/catkin_ws/devel/share/gennodejs/ros/chatroom/msg/: ChatMessage.js
ROS_tasks/chatroom/catkin_ws/devel/share/roseus/ros/chatroom/: manifest.l
ROS_tasks/chatroom/catkin_ws/devel/share/roseus/ros/chatroom/msg/: ChatMessage.l
ROS_tasks/chatroom/catkin_ws/src/chatroom/launch/: chatroom.launch
ROS_tasks/chatroom/catkin_ws/src/chatroom/src/: chatroom_node.cpp  user_node_1.cpp  user_node_2.cpp
ROS_tasks/chatroom/chatroom/: CMakeLists.txt  package.xml
ROS_tasks/chatroom/chatroom/launch/: chatroom.launch
ROS_tasks/chatroom/chatroom/src/: chatroom_node.cpp  user_node_1.cpp  user_node_2.cpp  user_node_3.cpp
Socket_UI/: GUI.py  imu_display.py  imu_publisher_node.py
